# supermemory.granaria

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: HANDBOOK.md  MCP Client Compatibility.md  phase2-roadmap.md
local_supermemory/: __init__.py  profile.py  rag.py  server.py  store.py
phase1/: README.md  SKILL_PATCH.md
phase1/dashboard/: __init__.py  __main__.py  audit.py  config.py  index.html  integration.py  server.py
phase1/hooks/: privacy_filter.py
phase1/tests/: test_dashboard.py  test_phase1.py
phase1/tools/: recall_progressive.py
