[project]
name = "local-supermemory"
version = "1.0.0"
description = "Lokale Supermemory-Alternative für Claude MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
local-supermemory = "local_supermemory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
